@@ -1,3 +1,9 @@
+2004-09-22  Miklos Szeredi <miklos@szeredi.hu>
+
+	* A slight API change: fuse_get_context() doesn't need the "fuse"
+	pointer, but the returned context contains it instead.  The
+	fuse_get() function is not needed anymore, so it's removed.
+	
 2004-09-21  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix deadlock in case of memory allocation failure.  Patch by
